# stack-sublibrary-rebuild

./: README.md  bug-repro.cabal
src2/: Lib2.hs
