cabal-version: 2.2

name:           bug-repro
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/bug-repro#readme>
homepage:       https://github.com/githubuser/bug-repro#readme
bug-reports:    https://github.com/githubuser/bug-repro/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2024 Author name here
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/githubuser/bug-repro

library lib2
  exposed-modules:
      Lib2
  other-modules:
      Paths_bug_repro
  autogen-modules:
      Paths_bug_repro
  hs-source-dirs:
      src2
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

library
  exposed-modules:
      Lib
  other-modules:
      Paths_bug_repro
  autogen-modules:
      Paths_bug_repro
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable bug-repro-exe
  main-is: Main.hs
  other-modules:
      Paths_bug_repro
  autogen-modules:
      Paths_bug_repro
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bug-repro
  default-language: Haskell2010
